--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Angular 2 Seed Project</title>
+    <title>Sportify App</title>
     <script src="vendor/es6-shim/es6-shim.min.js"></script>
     <script src="vendor/zone.js/dist/zone.js"></script>
     <script src="vendor/reflect-metadata/Reflect.js"></script>
