--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Sportify App</title>
-    <script src="vendor/es6-shim/es6-shim.min.js"></script>
     <script src="vendor/zone.js/dist/zone.js"></script>
     <script src="vendor/reflect-metadata/Reflect.js"></script>
     <script src="vendor/systemjs/dist/system.src.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
-<my-app>Loading...</my-app>
+<router-app>Loading...</router-app>
 
 <script>
     System.import('systemjs.config.js').then(function() {
